// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (import-destructuring-spacing) /src/codelyzer/import-destructuring-spacing/test.ts[1, 8]: Import statement's curly braces must be spaced exactly by a space to the right and a space to the left

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
import {Foo,Bar} from './foo';

======
import { Foo, Bar } from \\"./foo\\";

>>>>>> after
"
`;
